--- a/index.html
+++ b/index.html
@@ -65,6 +65,35 @@
 </body>
 </html>
 
-<script src="js/bootstrap.min.js">
+<script>
+    send_data({}, 'read');
 
+    function send_data(obj, type) {
+
+        var form = new FormData();
+        for (key in obj) {
+            form.append(key, obj[key]);
+        }
+
+        var ajax = new XMLHttpRequest();
+
+        ajax.addEventListener('readystatechange', function () {
+            if (ajax.readyState == 4) {
+                if (ajax.status == 200) {
+                    handle_result(ajax.responseText);
+                } else {
+                    alert("an error occurred");
+                }
+            }
+        });
+        ajax.open('post', 'api.php', true);
+        ajax.send(form);
+
+    }
+
+    function handle_result(result) {
+        alert(result);
+    }
 </script>
+
+<script src="js/bootstrap.min.js"></script>
